infrastructure/base/monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring

spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
