infrastructure/base/monitoring/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.1.111/prometheus`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
